# yours

./: CMakeLists.txt  README.md  makebuild.bash
code/: Makefile  TerminalAnsiColor.makefile  build.sbt
code/src/main/scala/: Yours.scala
code/src/main/scala/yours/: InputProcessor.scala
code/src/main/scala/yours/execute/: ActionScalaScript.scala  Executor.scala
code/src/main/scala/yours/grammar/: SentenceParser.scala  Token.scala
code/src/main/scala/yours/interpret/: Interpreter.scala  package.scala
code/src/main/scala/yours/interpret/backend/: OutputProcessor.scala  ParsedSentence.scala
code/src/main/scala/yours/interpret/frontend/: InputProcessor.scala
code/src/main/scala/yours/word/: FileWordDB.scala  WordDB.scala  package.scala
code/wordDB/: hello.xml  hello.yaml  nothing.yaml  universe.yaml
db/U/n/i/v/e/r/s/e/: Universe.json
db/c/i/r/c/l/e/: circle.json
db/k/i/n/g/_/a/r/t/h/u/r/_/t/a/b/l/e/: king_arthur_table.json
db/s/h/a/p/e/: shape.json
db/t/a/b/l/e/: table.json
db/u/n/i/v/e/r/s/e/: universe.json
old1/ruby/: CMakeLists.txt  TelnetServer.rb  env.example.sh
old1/wordDB/src/ruby/: buildDB.rb
old2/code/: Makefile
old2/code/src/main/scala/yours/execute/: ActionScalaScript.scala
old2/code/src/main/scala/yours/grammar/: Token.scala  package.scala
old2/code/src/main/scala/yours/interpret/: Interpreter.scala  package.scala
old2/code/src/main/scala/yours/interpret/backend/: OutputProcessor.scala  ParsedText.scala
old2/code/src/main/scala/yours/interpret/frontend/: InputProcessor.scala
old2/code/src/main/scala/yours/word/: FileWordDB.scala  WordDef.scala  package.scala
ruby/: CMakeLists.txt  main.rb  version.rb  yours-run.rb
src/: CMakeLists.txt  yours.cpp  yours_compile.cpp  yours_list.cpp  yours_path.cpp  yours_sqlite.cpp
src/yours/: options.cpp  options.h  prolog.cpp  prolog.h  sqlite.cpp  sqlite.h  term.cpp  term.h  trie_path.cpp  trie_path.h
v2/: Makefile  Yours.scala  build.sbt
v2/wordDB/: Universe.yaml
v2/yours/: SentenceParser.scala
wordDB/: CMakeLists.txt
